@@ -114,6 +114,10 @@ sethome.noPerm: '&6Your are not a high enough rank to set your team home'
 chat.enabled: '&6Your messages now go to the team chat'
 chat.disabled: '&6Your messages now go to the global chat'
 
+# for /team color <color> 
+color.success: '&6Your team color has been changed'
+color.fail: '&6That is not a recognised chat color'
+
 # for chat formatting
 chat.syntax: '&6&b[Team]&f%s: %s'
 
@@ -147,3 +151,4 @@ help.invite: Invite the specified player to your team
 help.disband: Disband your current team
 help.open: Toggle if the team is invite only
 help.info: View information about the specified player / team
+helo.color: Change your teams color
