@@ -1,0 +1,69 @@
+package com.booksaw.betterTeams.commands.team;
+
+import java.util.List;
+
+import org.bukkit.ChatColor;
+import org.bukkit.command.CommandSender;
+
+import com.booksaw.betterTeams.PlayerRank;
+import com.booksaw.betterTeams.Team;
+import com.booksaw.betterTeams.TeamPlayer;
+import com.booksaw.betterTeams.commands.presets.TeamSubCommand;
+
+public class ColorCommand extends TeamSubCommand {
+
+	@Override
+	public String onCommand(TeamPlayer teamPlayer, String label, String[] args, Team team) {
+
+		if (teamPlayer.getRank() != PlayerRank.OWNER) {
+			return "needOwner";
+		}
+
+		ChatColor color = ChatColor.getByChar(args[0].charAt(0));
+		if (color == null) {
+			return "color.fail";
+		}
+
+		team.setColor(color);
+
+		return "color.success";
+	}
+
+	@Override
+	public String getCommand() {
+		return "color";
+	}
+
+	@Override
+	public int getMinimumArguments() {
+		return 1;
+	}
+
+	@Override
+	public String getNode() {
+		return "color";
+	}
+
+	@Override
+	public String getHelp() {
+		return "Change your teams color";
+	}
+
+	@Override
+	public String getArguments() {
+		return "<color code>";
+	}
+
+	@Override
+	public int getMaximumArguments() {
+		return 1;
+	}
+
+	@Override
+	public void onTabComplete(List<String> options, CommandSender sender, String label, String[] args) {
+		for (ChatColor c : ChatColor.values()) {
+			options.add(c.getChar() + "");
+		}
+	}
+
+}
